Details
-
Bug
-
Resolution: Done
-
P0: Blocker
-
5.9.0 Alpha
-
None
-
ios, winrt 8.1, winrt 10, windows phone 8.1
-
-
f8f4f3081cdac5bdc6eaa0d80e0e9b63868e6e11
Description
In latest qt5 5.8 integrations,
https://codereview.qt-project.org/#/c/186826/
http://10.212.3.36:8080/coin/integration/qt/qt5/tasks/web_qt_qt5_1488435898356
http://10.212.3.36:8080/coin/api/results/qt/qtlocation/50e46a60ccc48b76a7420a37f2a98ff0f8c60026/MacOSOSX_10_10x86_64IOSIOS_ANYmultiClangqtci-osx-10.10-x86_64-dfdbffDebugAndRelease_DisableTests_Static/b9358070699ecb0ab961c7b4bbae2c8beec4bf0d/build_1488436064/buildlog.txt.gz
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/clang++ -c -Xarch_armv7 -include.pch/release/Qt5Location/c++_armv7 -Xarch_arm64 -include.pch/release/Qt5Location/c++_arm64 -Xarch_i386 -include.pch/release/Qt5Location/c++_i386 -Xarch_x86_64 -include.pch/release/Qt5Location/c++_x86_64 -pipe -stdlib=libc++ -fvisibility=hidden -fpascal-strings -fmessage-length=0 -Wno-trigraphs -Wreturn-type -Wparentheses -Wswitch -Wno-unused-parameter -Wunused-variable -Wunused-value -Wno-shorten-64-to-32 -Wno-sign-conversion -fexceptions -fasm-blocks -Wno-missing-field-initializers -Wno-missing-prototypes -Wno-implicit-atomic-properties -Wformat -Wno-missing-braces -Wno-unused-function -Wno-unused-label -Wuninitialized -Wno-unknown-pragmas -Wno-shadow -Wno-four-char-constants -Wno-sign-compare -Wpointer-sign -Wno-newline-eof -Wdeprecated-declarations -Winvalid-offsetof -Wno-conversion -fvisibility-inlines-hidden -Wno-non-virtual-dtor -Wno-overloaded-virtual -Wno-exit-time-destructors -O2 -fPIC -std=c++1z -Xarch_armv7 -miphoneos-version-min=7.0 -Xarch_armv7 -isysroot/Applications/Xcode.app/Contents/Developer/Platforms/iPhoneOS.platform/Developer/SDKs/iPhoneOS9.2.sdk -Xarch_arm64 -miphoneos-version-min=7.0 -Xarch_arm64 -isysroot/Applications/Xcode.app/Contents/Developer/Platforms/iPhoneOS.platform/Developer/SDKs/iPhoneOS9.2.sdk -Xarch_i386 -mios-simulator-version-min=7.0 -Xarch_i386 -isysroot/Applications/Xcode.app/Contents/Developer/Platforms/iPhoneSimulator.platform/Developer/SDKs/iPhoneSimulator9.2.sdk -Xarch_x86_64 -mios-simulator-version-min=7.0 -Xarch_x86_64 -isysroot/Applications/Xcode.app/Contents/Developer/Platforms/iPhoneSimulator.platform/Developer/SDKs/iPhoneSimulator9.2.sdk -arch armv7 -arch arm64 -arch i386 -arch x86_64 -fobjc-nonfragile-abi -fobjc-legacy-dispatch -Wno-deprecated-implementations -Wprotocol -Wno-selector -Wno-strict-selector-match -Wno-undeclared-selector -fvisibility=hidden -fvisibility-inlines-hidden -fno-exceptions -fembed-bitcode -Wall -W -DDARWIN_NO_CARBON -DQT_COMPILER_SUPPORTS_SSE2 -DQT_BUILD_LOCATION_LIB -DQT_BUILDING_QT -DQT_NO_CAST_TO_ASCII -DQT_ASCII_CAST_WARNINGS -DQT_MOC_COMPAT -DQT_USE_QSTRINGBUILDER -DQT_DEPRECATED_WARNINGS -DQT_DISABLE_DEPRECATED_BEFORE=0x050000 -DQT_NO_EXCEPTIONS -D_LARGEFILE64_SOURCE -D_LARGEFILE_SOURCE -DQT_NO_DEBUG -DQT_POSITIONING_LIB -DQT_QUICK_LIB -DQT_GUI_LIB -DQT_QML_LIB -DQT_NETWORK_LIB -DQT_CORE_LIB -I. -I/Users/qt/work/install/mkspecs/common/uikit -Imaps -Iplaces -I../../include -I../../include/QtLocation -I../../include/QtLocation/5.8.1 -I../../include/QtLocation/5.8.1/QtLocation -I../../include/QtPositioning/5.8.1 -I../../include/QtPositioning/5.8.1/QtPositioning -I../../include/QtPositioning -I/Users/qt/work/install/include/QtCore/5.8.1 -I/Users/qt/work/install/include/QtCore/5.8.1/QtCore -I/Users/qt/work/install/include -I/Users/qt/work/install/include/QtQuick -I/Users/qt/work/install/include/QtGui -I/Users/qt/work/install/include/QtQml -I/Users/qt/work/install/include/QtNetwork -I/Users/qt/work/install/include/QtCore -I.moc/release -I/Users/qt/work/install/mkspecs/macx-ios-clang -o .obj/release/qgeoserviceprovider.o maps/qgeoserviceprovider.cpp In file included from maps/qgeoserviceprovider.cpp:62: In file included from /Users/qt/work/install/include/QtCore/QProcess:1: /Users/qt/work/install/include/QtCore/qprocess.h:49:1: error: static_assert failed "Required feature process for file /Users/qt/work/install/include/QtCore/qprocess.h not available." QT_REQUIRE_CONFIG(process); ^~~~~~~~~~~~~~~~~~~~~~~~~~ /Users/qt/work/install/include/QtCore/qglobal.h:84:36: note: expanded from macro 'QT_REQUIRE_CONFIG' #define QT_REQUIRE_CONFIG(feature) Q_STATIC_ASSERT_X(QT_FEATURE_##feature == 1, "Required feature " #feature " for file " __FILE__ " not available.") ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ /Users/qt/work/install/include/QtCore/qglobal.h:732:47: note: expanded from macro 'Q_STATIC_ASSERT_X' #define Q_STATIC_ASSERT_X(Condition, Message) static_assert(bool(Condition), Message) ^ ~~~~~~~~~~~~~~~ 1 error generated. make[3]: *** [.obj/release/qgeoserviceprovider.o] Error 1 make[3]: *** Waiting for unfinished jobs.... make[2]: *** [release-all] Error 2 make[1]: *** [sub-location-make_first] Error 2 make: *** [sub-src-make_first] Error 2