Remove unused includes

These includes seem to block CI on some configurations

Task-number: QTBUG-59243
Change-Id: I10e743302cd9e41036cd1e8e94746fd3b2d817d3
Reviewed-by: Ulf Hermann <ulf.hermann@qt.io>